--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </section>
         <!-- Adopt  Your  Best Friend ended -->
         <!-- Card-btn start -->
+         <section class="flex justify-between mb-8 md:px-24 lg:px-48" id="category-btn"></section>
         <!-- Card-btn ended -->
     </main>
 
@@ -98,10 +99,16 @@
                 <img src="images/logo.webp" alt="logo">
                 <a class="text-xl font-bold">Pedy</a>
             </div>
-            <a class="link link-hover">About us</a>
-            <a class="link link-hover">Contact</a>
-            <a class="link link-hover">Jobs</a>
-            <a class="link link-hover">Press kit</a>
+            <p class="link link-hover">Location: av. Washington 165, NY CA 54003</p>
+            <p class="link link-hover">Phone: +31 85 964 47 25</p>
+            <p class="link link-hover">Email: info@yourdomain.com</p>
+            <p class="link link-hover">Openings hours: 9.00 AM - 5.00 PM</p>
+            <div class="flex gap-6 mt-2 text-2xl">
+                <a href="#"><i class="fa-brands fa-facebook text-blue-700"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube text-red-700"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram text-red-200"></i></a>  
+            </div>
         </nav>
         <nav>
             <h3 class="footer-title mb-5">Useful Links</h3>
